--- a/assets/scss/_page-changer.scss
+++ b/assets/scss/_page-changer.scss
@@ -1,8 +1,10 @@
 .page-changer {
   &--1016 {
+    .container,
     .container-main,
     .c-block-cloud,
-    .c-block-05__row {
+    .c-block-05__row,
+    .c-head__wrap {
       @extend .container-main--1016;
     }
   }
@@ -11,8 +13,13 @@
     .container,
     .container-main,
     .c-block-cloud,
-    .c-block-05__row {
+    .c-block-05__row,
+    .c-head__wrap {
       @extend .container-main--1020;
     }
+  }
+
+  .c-head__wrap {
+    padding: 0 1.25rem;
   }
 }
